package com.survivalcoding.assignments_01_instance.exam01;

//(나): IntangibleAsset
public class IntangibleAsset extends Asset {

    public IntangibleAsset(String name, int price) {
        super(name, price);
    }
}
