package com.survivalcoding.assignments_01_instance.exam01.ab;

//double형으로 무게(weight)를 얻을 수 있는 getter/setter 메소드를 가지는 인터페이스 Thing

public interface Thing {
    double getWeight();
    void setWeight(double weight);
}
