@startuml

interface Thing {
+ double getWeight()
+ void setWeight(double weight)
}

abstract class Asset {
+ String name
+ int price
}

abstract class TangibleAsset {
+ String color
+ double weight
}

abstract class IntangibleAsset {
}

class Book {
+ String isbn
}

class Computer {
+ String makerName
}

class Patent {
}

TangibleAsset --|> Asset
IntangibleAsset --|> Asset
Book --|> TangibleAsset
Computer --|> TangibleAsset
Patent --|> IntangibleAsset

TangibleAsset ..|> Thing

@enduml